wwwroot/css/DashboardCSS/Index.css
body {
    font-family: Arial;
    background-color: #212529;
    color: var(--text-secondary);
    overflow: hidden;
}



div.statPillButtons {
    display: flex;
    align-items: baseline;
    text-align: center;
}

    div.statPillButtons .btn {
        font-size: 15px;
        border-radius: 0;
        border: 3px solid var(--text-primary);
    }

    div.statPillButtons .btn-outline-info:not(:first-of-type) {
        border-left: none;
    }



.areaChartDiv {
    width: 100%;
    border: 3px solid var(--text-primary);
    border-radius: 5px;
    padding: 0;
}

.areaChartCol {
    padding: 0;
}

.pieChartDiv {
    width: 100%;
}


.percentageCol {
    text-align: right;
    font-weight: bold;
}

.stackedCircles {
    min-width: 187px;
    margin: auto 0;
}




.fa-arrow-up {
    color: red;
}

.fa-arrow-down {
    color: lawngreen;
}

.mainDiv {
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

    .mainDiv::-webkit-scrollbar {
        display: block;
        width: 3px;
        background-color: var(--text-primary);
    }

    .mainDiv::-webkit-scrollbar-track-piece:start {
        margin-top: 0;
        scrollbar-track-color: red;
    }

    .mainDiv::-webkit-scrollbar-thumb {
        background-color: #0790ab;
    }
    .mainDiv-row {
        display: flex;
        align-items: center;
    }

div .u-statCircle, div .c-statCircle, div.p-statCircle {
    animation: circleShow 0.6s linear;
}

@keyframes circleShow {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

